--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,10 @@
 cmake_minimum_required(VERSION 3.14)
 project(student-database)
-add_executable(${PROJECT_NAME} src/main.cpp src/database.cpp src/student.cpp)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(SOURCES src/database.cpp src/student.cpp)
+set(FLAGS -Wall -Wextra -Wpedantic -std=c++2a)
 
 include(FetchContent)
 FetchContent_Declare(
@@ -15,9 +16,13 @@ FetchContent_Declare(
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
 
+add_executable(${PROJECT_NAME} ${SOURCES} src/main.cpp)
+target_compile_options(${PROJECT_NAME} PRIVATE ${FLAGS})
+
 enable_testing()
 
-add_executable(${PROJECT_NAME}-ut src/tests.cpp src/database.cpp src/student.cpp)
+add_executable(${PROJECT_NAME}-ut ${SOURCES} src/tests.cpp)
+target_compile_options(${PROJECT_NAME}-ut PRIVATE ${FLAGS})
 target_link_libraries(${PROJECT_NAME}-ut GTest::gtest_main)
 
 include(GoogleTest)
